# 3931-Individual-Project

./: .gitignore  Cargo.toml  README.md
Documents/Project Outline/: COMP3931 Project Outline.tex
ast/: Cargo.toml  code_output.json
ast/src/: main.rs  test.rs
dec_to_bin/: Cargo.toml
euclidean/: Cargo.toml
euclidean/src/: main.rs
factorial/: Cargo.toml
factorial/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
first_order/: Cargo.toml
first_order/src/: lib.rs
hoare_logic/: Cargo.toml  Useful Unicode Symbols.txt
hoare_logic/dec_to_bin/: Cargo.toml
hoare_logic/dec_to_bin/src/: main.rs
hoare_logic/euclidean/: Cargo.toml
hoare_logic/euclidean/src/: main.rs
hoare_logic/first_order/: Cargo.toml
hoare_logic/first_order/src/: lib.rs
hoare_logic/hoare_triple/: Cargo.toml
hoare_logic/hoare_triple/src/: lib.rs
hoare_logic/paper_example/: Cargo.toml
hoare_logic/paper_example/src/: main.rs
hoare_logic/proof_line/: Cargo.toml
hoare_logic/proof_line/src/: lib.rs
hoare_logic/src/: first_order.rs  hoare_triple.rs  main.rs
hoare_triple/: Cargo.toml
hoare_triple/src/: lib.rs
proof_line/: Cargo.toml
proof_line/src/: lib.rs
quotient_remainder/: Cargo.toml
quotient_remainder/src/: main.rs
results/dec_to_bin/: Cargo.toml
results/dec_to_bin/src/: main.rs
results/euclidean/: Cargo.toml
results/euclidean/src/: main.rs
results/factorial/: Cargo.toml
results/fibonacci/: Cargo.toml
results/quotient_remainder/: Cargo.toml
src/: hoare_triple.rs  main.rs
tmp/: Cargo.toml
tmp/src/: main.rs
(+1 files in other folders)
